# ternary_computer

./: .gitignore  Cargo.toml  README.md  Readme.md  prog.tasm  prog.tbin
src/: lib.rs  main.rs  ternary_asm.rs  ternary_cpu.rs  ternary_utils.rs  trit.rs
src/ternary_asm/: asm_utils.rs
src/ternary_cpu/: asm_utils.rs  logical_alu.rs  logical_cpu.rs  logical_table.rs  ternary_io.rs  trit.rs  trits.rs
src/ternary_utils/: dibit_logic.rs  logical_calculate.rs  string_calculate.rs  ternary_io.rs
src/ternary_utils/logical_calculate/: logical_table.rs
src/trit/: bit_utils.rs  trit16.rs  trit32.rs  trit4.rs  trit8.rs  trit_ops.rs
trit_macro/: Cargo.toml
trit_macro/src/: lib.rs
