[package]
name = "ternary_arithmetic"
version = "0.2.0"
edition = "2024"
authors = ["10555gff 1073245193@qq.com"]
description = "balanced ternary use array logic gate to arithmetic"
license = "MIT"
repository = "https://github.com/10555gff/ternary_computer"
homepage = "https://github.com/10555gff/ternary_computer"
readme = "README.md"
keywords = ["ternary", "balanced_ternary", "ternary_arithmetic", "ternary_logic", "logic"]
categories = ["mathematics"]

[dependencies]
trit_macro = "0.1.1"

[patch.crates-io]
trit_macro = { path = "./trit_macro" }